# repodocs

./: .gitignore  CHANGELOG.md  CLAUDE.README.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pyproject.toml  repodocs  repodocs.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
repo-docs-profile/: AGENTS.md  isolation.yml
repo-docs-profile/agents/: wiki-planner.md
scripts/: check_module_size.py
src/repodocs/: __init__.py  __main__.py  _util.py  backend.py  citations.py  cli.py  diagrams.py  generate.py  gitlinks.py  plan.py  publish.py  render.py  scan.py  translate.py
src/repodocs/repo-docs-profile/: AGENTS.md
src/repodocs/repo-docs-profile/agents/: wiki-writer.md
tests/: test_fix_citation_repair.py  test_fix_diagrams.py  test_fix_generate.py  test_fix_plan.py  test_fix_publish.py  test_fix_render_links.py  test_fix_scan_util.py  test_fix_translate_cite.py  test_repodocs.py
tools/: diagram_poster.ts  example-architecture.yaml  example-overview.yaml  package.json
