[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repodocs"
description = "Generate a DeepWiki/cubic.dev-style repository wiki with Claude Code, OMP, or Codex CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/aryrabelo/repodocs"

[project.scripts]
repodocs = "repodocs.cli:cli"
repodocs-all = "repodocs.cli:cli_all"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/repodocs/**" }]

[tool.hatch.version]
path = "src/repodocs/__init__.py"
pattern = "^VERSION = \"(?P<version>[^\"]+)\""

[tool.hatch.build.targets.wheel]
packages = ["src/repodocs"]
# repo-docs-profile/AGENTS.md matches the unanchored `AGENTS.md` .gitignore rule;
# artifacts re-includes this vendored contract file in the wheel.
artifacts = ["src/repodocs/repo-docs-profile/AGENTS.md"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# pyflakes (F) + the correctness-focused pycodestyle subsets. Line length is
# intentionally not enforced; long lines here are deliberate and readable.
select = ["E4", "E7", "E9", "F"]
